=Added content, fixed readability and contact form

--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,19 @@
 */
 
 html {
-  height: 100%;
-  box-sizing: border-box;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 body {
-  min-height: 100%;
-  margin: 0;
+	min-height: 100%;
+	margin: 0;
 }
 
 body {
@@ -31,13 +31,13 @@ body {
 	margin: 0 auto;
 	max-width: 980px;
 	width: 100%;
-	padding: 0 20px;
+	padding: 0 20px 40px 20px;
 	text-align: left;
 }
 .title {
 	float: left;
 	margin-top: 30px;
-	width: 65%;
+	width: 75%;
 }
 h1, h2 , h3 {
 	font-family: 'Roboto Slab', serif;
@@ -80,8 +80,8 @@ nav a:hover {
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 	line-height: 170%;
 }
-.portfolio {
-
+.thumbnails {
+	margin-bottom: 20px;
 }
 .portfolio h3 {
 	margin-bottom: 20px;
@@ -89,17 +89,22 @@ nav a:hover {
 }
 .portfolio_item {
 	float:left;
+	position: relative;
 	width:22%;
 	margin-right: 3%;
 	text-align: center;
 	transition: .2s;
-	margin-bottom: 15px;
+	margin-bottom: 40px;
+	padding-bottom: 50px;
 }
 .portfolio_item.last {
 	margin-right: 0;
 }
+.portfolio_item.last::after {
+	clear: both;
+}
 .portfolio_item img {
-	width:100%;
+	width: 100%;
 	border: 12px double #F8FAEF;
 }
 .portfolio_item a {
@@ -108,10 +113,17 @@ nav a:hover {
 	color: #F8FAEF;
 }
 .portfolio_item span {
+	display: block;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75);
 	font-weight: 500;
+	width: 100%;
+	height: 30px;
 }
-.portfolio_item:hover {
+.portfolio_item:hover ,
+.portfolio_item.selected {
 	width:24%;
 	transition: .2s;
 	margin: -6px 2% 0 -1%;
@@ -121,15 +133,14 @@ nav a:hover {
 }
 .spotlight {
 	clear: both;
-/*	position: relative;
-*/	border-top: 4px solid #F8FAEF;
-	/*height: 0;*/
+	border-bottom: 4px solid #F8FAEF;
 }
 .spotlight_item {
 	display: none;
 	position: relative;
 	top: 0;
 	overflow: hidden;
+	border-top: 4px solid #F8FAEF;
 }
 .spotlight_item span {
 	display: block;
@@ -152,7 +163,7 @@ nav a:hover {
 }
 .spotlight_image{
 	text-align: center;
-	margin-top: 20px;
+	margin: 20px 0 30px 0;
 }
 .spotlight_image img{
 	width: 90%;
@@ -248,3 +259,18 @@ nav a:hover {
   background-color: #597589; 
   color: #FFF;
 }
+
+
+/*@media only screen and (max-width: 768px) {
+
+	.portfolio_item {
+		width:44%;
+	}
+
+	.portfolio_item:hover ,
+	.portfolio_item.selected {
+		width:47%;
+		transition: .2s;
+		margin: -6px 1.5% 30px -1.5%;
+	}
+}*/
